--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -89,7 +89,7 @@ jobs:
         run: |
           gh workflow run service-deployment-routing.yml \
             --repo arXiv/arxiv-iac \
-            --ref main \
+            --ref limit_project_name_size \
             -f image_tag="${{ github.sha }}" \
             -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
             -f repository="${{ github.repository }}" \
