--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -49,8 +49,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: format-check
     environment: ${{ inputs.env }}
-    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-
+    #if: (github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch') && ((inputs.env != 'production' && inputs.env != 'prod' && inputs.env != 'staging' && inputs.env != 'stage') || inputs.image_tag != 'latest')
+    if: >
+      (github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch') &&
+      ((inputs.env != 'production' && inputs.env != 'prod' && inputs.env != 'staging' && inputs.env != 'stage') || inputs.image_tag != 'latest')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -70,7 +72,7 @@ jobs:
           echo "REGION=$REGION" >> $GITHUB_ENV
 
           # Set project name and terraform bucket based on environment
-          if [ "$ENV_NAME" = "production" ]; then
+          if [ "$ENV_NAME" = "production" ] || [ "$ENV_NAME" = "prod" ]; then
             echo "PROJECT_NAME=arxiv-production" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=prod-arxiv-terraform-state" >> $GITHUB_ENV
             TERRAFORM_ARGS="-var-file=envs/prod.tfvars"
@@ -100,8 +102,8 @@ jobs:
       - name: Authenticate with arxiv-development
         uses: google-github-actions/auth@v3
         with:
-          workload_identity_provider: ${{ secrets.ARXIV_DEVELOPMENT_PROVIDER_NAME_SECRET }}
-          service_account: ${{ secrets.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT_SECRET }}
+          workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+          service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
