--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -49,7 +49,6 @@ jobs:
   build-push:
     needs: format-check
     runs-on: ubuntu-latest
-    environment: development
 
     steps:
       - name: Checkout code
@@ -60,8 +59,8 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v3
         with:
-          workload_identity_provider: ${{ vars.PROVIDER_NAME }}
-          service_account: ${{ vars.SERVICE_ACCOUNT }}
+          workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+          service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
@@ -89,7 +88,7 @@ jobs:
         run: |
           gh workflow run service-deployment-routing.yml \
             --repo arXiv/arxiv-iac \
-            --ref limit_project_name_size \
+            --ref update_refs \
             -f image_tag="${{ github.sha }}" \
             -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
             -f repository="${{ github.repository }}" \
