--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -49,6 +49,7 @@ jobs:
   build-push:
     needs: format-check
     runs-on: ubuntu-latest
+    environment: development
 
     steps:
       - name: Checkout code
