--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -51,6 +51,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
 
+    concurrency:
+      group: build-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,6 +91,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.ARXIV_IAC_PAT }}
         run: |
+          env | sort
           gh workflow run service-deployment-routing.yml \
             --repo arXiv/arxiv-iac \
             --ref main \
