--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -88,17 +88,9 @@ jobs:
       # don't deploy image rebuilds
       - name: Deployment Routing
         if: ${{ !inputs.custom_sha }}
-        env:
-          GH_TOKEN: ${{ secrets.ARXIV_IAC_PAT }}
-        run: |
-          env | sort
-          gh workflow run service-deployment-routing.yml \
-            --repo arXiv/arxiv-iac \
-            --ref main \
-            -f image_tag="${{ github.sha }}" \
-            -f deploy_workflow="${{ env.DEPLOY_WORKFLOW }}" \
-            -f repository="${{ github.repository }}" \
-            -f ref_name="${{ github.ref_name }}" \
-            -f event_name="${{ github.event_name }}" \
-            -f base_ref="${{ github.base_ref }}" \
-            -f head_ref="${{ github.head_ref }}"
+        uses: arXiv/iac-public/.github/actions/service-deployment-routing@main  
+        with:
+          image_tag: ${{ inputs.custom_sha || github.sha }}
+          deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
+          workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+          service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
