use public action

--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -90,7 +90,7 @@ jobs:
         if: ${{ !inputs.custom_sha }}
         uses: arXiv/iac-public/.github/actions/service-deployment-routing@main  
         with:
-          image_tag: ${{ inputs.custom_sha || github.sha }}
+          image_tag: ${{ github.sha }}
           deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
           workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
           service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
