--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -16,11 +16,11 @@ on:
         required: false
         type: string
 
-# permissions:
-#   contents: read
-#   pull-requests: write
-#   id-token: write
-#   actions: write
+permissions:
+  contents: read
+  #pull-requests: write
+  #id-token: write
+  #actions: write
 
 env:
   DEPLOY_WORKFLOW: "deploy-stats-api.yml"
