testing build permissions

--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -16,10 +16,10 @@ on:
         required: false
         type: string
 
-permissions:
-  contents: read
+permissions: read-all
+  #contents: read
   #pull-requests: write
-  #id-token: write
+  #id-token
   #actions: write
 
 env:
