--- a/.github/workflows/lint-test-function.yml
+++ b/.github/workflows/lint-test-function.yml
@@ -7,7 +7,13 @@ on:
         type: string
         description: The name of the function directory (e.g. aggregate_hourly_downloads)
         required: true
-
+  workflow_dispatch:
+    inputs:
+      function_name:
+        type: string
+        description: Name of the function directory (e.g. aggregate_hourly_downloads)
+        required: true
+        
 permissions:
   contents: read
 
