--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -1,4 +1,5 @@
 name: Hourly edge requests triggers
+run-name: "Hourly Edge Requests ${{ github.ref_name }} ${{ github.sha }}"
 
 on:
   push:
@@ -26,8 +27,19 @@ jobs:
     with:
       function_name: hourly_edge_requests
 
-  call-deploy:
-    name: Deploy
-    uses: ./.github/workflows/deploy-function.yml
+  deployment-routing:
+    name: Deployment Routing
+    needs: call-lint-test
+    uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101  
     with:
+      image_tag: ${{ github.sha }}
+      deploy_workflow: deploy-function.yml
       function_name: hourly_edge_requests
+      workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+      service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
+
+  # call-deploy:
+  #   name: Deploy
+  #   uses: ./.github/workflows/deploy-function.yml
+  #   with:
+  #     function_name: hourly_edge_requests
