--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -28,15 +28,22 @@ jobs:
       function_name: hourly_edge_requests
 
   deployment-routing:
-    name: Deployment Routing
     needs: call-lint-test
-    uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101  
-    with:
-      image_tag: ${{ github.sha }}
-      deploy_workflow: deploy-function.yml
-      function_name: hourly_edge_requests
-      workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
-      service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
+    runs-on: ubuntu-latest
+
+    concurrency:
+      group: build-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
+    steps:
+      - name: Deployment Routing
+        uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101  
+        with:
+          image_tag: ${{ github.sha }}
+          deploy_workflow: deploy-function.yml
+          function_name: hourly_edge_requests
+          workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+          service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
 
   # call-deploy:
   #   name: Deploy
