--- a/.github/workflows/lint-test-function.yml
+++ b/.github/workflows/lint-test-function.yml
@@ -1,5 +1,7 @@
 name: Lint and test function
 
+run-name: "Lint and Test ${{ inputs.function_name }} ${{ github.ref_name }} ${{ github.sha }}"
+
 on:
   workflow_call:
     inputs:
