--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -22,14 +22,13 @@ on:
 
 jobs:
   call-lint-test:
-    
     name: Lint and Test
     uses: ./.github/workflows/lint-test-function.yml
     with:
       function_name: hourly_edge_requests
 
   deployment-routing:
-    needs: call-lint-test
+    #needs: call-lint-test
     runs-on: ubuntu-latest
 
     concurrency:
