--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -21,11 +21,11 @@ on:
   #       description: Select the environment
 
 jobs:
-  call-lint-test:
-    name: Lint and Test
-    uses: ./.github/workflows/lint-test-function.yml
-    with:
-      function_name: hourly_edge_requests
+  # call-lint-test:
+  #   name: Lint and Test
+  #   uses: ./.github/workflows/lint-test-function.yml
+  #   with:
+  #     function_name: hourly_edge_requests
 
   deployment-routing:
     #needs: call-lint-test
