--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -1,6 +1,6 @@
 name: Format check and deploy cloud functions
 
-run-name: "Deploy ${{ inputs.function_name }} ${{ inputs.env }} ${{ github.sha }}"
+run-name: "Deploy ${{ inputs.function_name }} ${{ inputs.env }} ${{ inputs.commit_sha }}"
 
 on:
   workflow_dispatch:
@@ -14,6 +14,12 @@ on:
         required: true
         type: string
         default: ""
+      commit_sha:
+        description: "Commit SHA"
+        required: true
+        type: string
+        default: ${{ github.sha }}
+
       # The deploy runs based on the commit/SHA of the workflow branch running this deploy workflow.
       # If you have to redeploy a specific commit/SHA then create a branch from that commit/SHA.
       # image_tag:
@@ -56,6 +62,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.commit_sha }}
 
       - name: Zip function source
         # zips all files inside the 'src/' directory into src.zip
@@ -106,7 +114,7 @@ jobs:
 
           # Add image_path to TERRAFORM_ARGS for all environments
           TERRAFORM_ARGS="$TERRAFORM_ARGS \
-            -var=\"commit_sha=${{ github.sha }}\""
+            -var=\"commit_sha=${{ inputs.commit_sha }}\""
 
           echo "TERRAFORM_ARGS=$TERRAFORM_ARGS" >> $GITHUB_ENV
         
