--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -50,7 +50,7 @@ jobs:
         run: terraform --version
 
       - name: Format check
-        run: terraform fmt -check
+        run: terraform fmt -check -diff
         working-directory: "terraform/${{ inputs.function_name }}"
 
   deploy:
