--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -15,6 +15,11 @@ on:
       - "stats-functions/aggregate_hourly_downloads/**"
       - "terraform/aggregate_hourly_downloads/**"
 
+permissions:
+  id-token: write
+  actions: write
+  contents: read      
+
 jobs:
   call-lint-test:
     name: Lint and Test
@@ -23,15 +28,22 @@ jobs:
       function_name: aggregate_hourly_downloads
 
   deployment-routing:
-    name: Deployment Routing
-    needs: call-lint-test
-    uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101  
-    with:
-      image_tag: ${{ github.sha }}
-      deploy_workflow: deploy-function.yml
-      function_name: aggregate_hourly_downloads
-      workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
-      service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
+      needs: call-lint-test
+      runs-on: ubuntu-latest
+  
+      concurrency:
+        group: deploy-${{ github.workflow }}-${{ github.ref }}
+        cancel-in-progress: true
+  
+      steps:
+        - name: Deployment Routing
+          uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101  
+          with:
+            image_tag: ${{ github.sha }}
+            deploy_workflow: deploy-function.yml
+            function_name: aggregate_hourly_downloads
+            workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+            service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}      
 
   # call-deploy:
   #   name: Deploy
