--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -21,8 +21,20 @@ permissions:
   contents: read      
 
 jobs:
+  debug-trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+
+      - name: List all changed files
+        run: |
+          echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
+
   call-lint-test:
     name: Lint and Test
+    needs: debug-trigger
     uses: ./.github/workflows/lint-test-function.yml
     with:
       function_name: aggregate_hourly_downloads
