--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -21,20 +21,20 @@ permissions:
   contents: read      
 
 jobs:
-  debug-trigger:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v44
+  # debug-trigger:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Get changed files
+  #       id: changed-files
+  #       uses: tj-actions/changed-files@v44
 
-      - name: List all changed files
-        run: |
-          echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
+  #     - name: List all changed files
+  #       run: |
+  #         echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
 
   call-lint-test:
+    #needs: debug-trigger
     name: Lint and Test
-    needs: debug-trigger
     uses: ./.github/workflows/lint-test-function.yml
     with:
       function_name: aggregate_hourly_downloads
@@ -56,9 +56,3 @@ jobs:
             function_name: aggregate_hourly_downloads
             workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
             service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}      
-
-  # call-deploy:
-  #   name: Deploy
-  #   uses: ./.github/workflows/deploy-function.yml
-  #   with:
-  #     function_name: aggregate_hourly_downloads
