update the vars that change for ephemeral envs

--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -117,7 +117,10 @@ jobs:
             echo "TERRAFORM_BUCKET=$ENV_NAME-arxiv-terraform-state" >> $GITHUB_ENV
             TERRAFORM_ARGS="-var-file=envs/dev.tfvars \
               -var=\"gcp_project_id=$ENV_NAME\" \
-              -var=\"gcp_region=$REGION\""
+              -var=\"gcp_region=$REGION\" \
+              -var=\"read_db_pw_secret_name=master-db-readonly-password\" \
+              -var=\"read_db_instance=$ENV_NAME:$REGION:master-db\" \
+              -var=\"write_db_instance=$ENV_NAME:$REGION:stats-db\""
           fi
 
           # Add image_path to TERRAFORM_ARGS for all environments
