--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -110,9 +110,14 @@ jobs:
             TERRAFORM_ARGS="-var-file=envs/dev.tfvars \
               -var=\"gcp_project_id=$ENV_NAME\" \
               -var=\"gcp_region=$REGION\" \
-              -var=\"read_db_pw_secret_name=master-db-readonly-pw\" \
-              -var=\"read_db_instance=$ENV_NAME:$REGION:master-db\" \
               -var=\"write_db_instance=$ENV_NAME:$REGION:stats-db\""
+
+            # not all cloud functions have the same variables
+            if [ "${{ inputs.function_name }}" = "aggregate_hourly_downloads" ]; then
+              TERRAFORM_ARGS="$TERRAFORM_ARGS \
+                -var=\"read_db_pw_secret_name=master-db-readonly-pw\" \
+                -var=\"read_db_instance=$ENV_NAME:$REGION:master-db\""
+            fi
           fi
 
           # Add image_path to TERRAFORM_ARGS for all environments
