--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -14,6 +14,11 @@ on:
     paths:
       - "stats-functions/aggregate_hourly_downloads/**"
       - "terraform/aggregate_hourly_downloads/**"
+  workflow_dispatch:
+    inputs:
+      environment:
+        type: environment
+        description: Select the environment
 
 permissions:
   id-token: write
