--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -93,7 +93,7 @@ jobs:
       # CI Deployment Routing ... manual builds of a commit are not CD candidates
       - name: Deployment Routing
         if: ${{ !inputs.custom_sha }}
-        uses: arXiv/iac-public/.github/actions/service-deployment-routing@ARXIVCE-4101
+        uses: arXiv/iac-public/.github/actions/service-deployment-routing@main
         with:
           image_tag: ${{ github.sha }}
           deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
