[ARXIVCE-4101] update workflows for supporting ephemeral env deployments (#90)
* restructure workflows

* update variable references

* update requests trigger

* update function workflows

* test aggregate

* updates

* test

* test

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* testing

* updates

* updates

* updates

* updates

* updates

* updates

* updates

* updates

* terraform fmt -check is complaining

* updates

* updates

* testing

* test

* test

* updates

* testing

* updates

* updates

* test

* updates

* test

* test

* updates

* test

* updates

* fixed terraform fmt issue

* test wf

* test wf

* testing

* updates

* updates

* updates

* updates

* update the vars that change for ephemeral envs

* test

* fix the name of the secret that read_db_pw_secret_name var looks for

* terraform complains if we set vars that are not applicable

* override env var

* testing

* testing

* testing

* removed the files added to trigger workflow builds

* adding dispatch back in

* testing

* testing

* test

* test

* updates

* testing

* removing change to deploy-stats-api

---------

Co-authored-by: carly <carly@arxiv.org>

--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -1,4 +1,5 @@
 name: Aggregate hourly downloads triggers
+run-name: "Aggregate Hourly Downloads ${{ github.ref_name }} ${{ github.sha }}"
 
 on:
   push:
@@ -19,6 +20,11 @@ on:
         type: environment
         description: Select the environment
 
+permissions:
+  id-token: write
+  actions: write
+  contents: read      
+
 jobs:
   call-lint-test:
     name: Lint and Test
@@ -26,12 +32,21 @@ jobs:
     with:
       function_name: aggregate_hourly_downloads
 
-  call-deploy:
-    name: Deploy
-    uses: ./.github/workflows/deploy-function.yml
-    with:
-      function_name: aggregate_hourly_downloads
-      environment: ${{ inputs.environment }}
-      PROVIDER_NAME: ${{ vars.PROVIDER_NAME }}
-      SERVICE_ACCOUNT: ${{ vars.SERVICE_ACCOUNT }}
-      ENV_VAR: ${{ vars.ENV_VAR }}
+  deployment-routing:
+      needs: call-lint-test
+      runs-on: ubuntu-latest
+  
+      concurrency:
+        group: deploy-${{ github.workflow }}-${{ github.ref }}
+        cancel-in-progress: true
+  
+      steps:
+        - name: Deployment Routing
+          uses: arXiv/iac-public/.github/actions/service-deployment-routing@main
+          with:
+            image_tag: ${{ github.sha }}
+            deploy_workflow: deploy-function.yml
+            function_name: aggregate_hourly_downloads
+            function_name_env: ${{ inputs.environment }}
+            workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+            service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}      
