--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -1,4 +1,5 @@
 name: Hourly edge requests triggers
+run-name: "Hourly Edge Requests ${{ github.ref_name }} ${{ github.sha }}"
 
 on:
   push:
@@ -19,19 +20,33 @@ on:
         type: environment
         description: Select the environment
 
+permissions:
+  id-token: write
+  actions: write
+  contents: read
+
 jobs:
   call-lint-test:
     name: Lint and Test
     uses: ./.github/workflows/lint-test-function.yml
     with:
-      function_name: aggregate_hourly_downloads
+      function_name: hourly_edge_requests
 
-  call-deploy:
-    name: Deploy
-    uses: ./.github/workflows/deploy-function.yml
-    with:
-      function_name: aggregate_hourly_downloads
-      environment: ${{ inputs.environment }}
-      PROVIDER_NAME: ${{ vars.PROVIDER_NAME }}
-      SERVICE_ACCOUNT: ${{ vars.SERVICE_ACCOUNT }}
-      ENV_VAR: ${{ vars.ENV_VAR }}
+  deployment-routing:
+    needs: call-lint-test
+    runs-on: ubuntu-latest
+
+    concurrency:
+      group: deploy-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
+    steps:
+      - name: Deployment Routing
+        uses: arXiv/iac-public/.github/actions/service-deployment-routing@main
+        with:
+          image_tag: ${{ github.sha }}
+          deploy_workflow: deploy-function.yml
+          function_name: hourly_edge_requests
+          function_name_env: ${{ inputs.environment }}
+          workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
+          service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}
